fixed horizontal scrolling bar issue

--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,6 @@ body {
 #contact,
 #work1,
 #work2 {
-	margin-left: -15px;
-	margin-right: -15px;
 	margin-bottom: 40px;
 }
 
